# pong-rust

./: Cargo.toml  README.md
scripts/: compile-shaders.sh
shaders/spv/: main.vert.spv
shaders/src/: main.frag  main.vert
src/: ball.rs  camera.rs  graphics_manager.rs  main.rs  paddle.rs  scene.rs  wall.rs
src/graphics_manager/: constants.rs  debug.rs  fps_limiter.rs  platforms.rs  share.rs  structures.rs  window.rs
